test/resolver/old5.b3
// RUN: %b3 resolve --rprint "%s" > "%t"
// RUN: %diff "%s.expect" "%t"

procedure T() {
  var a: int
  assert old a == 3 // error: 'old' can only be applied to inout-parameters
}
